--- a/styles/details.css
+++ b/styles/details.css
@@ -11,9 +11,12 @@
 }
 
 .facility__options {
+    display: flex;
+    justify-content: center;
     margin: 1em;
     border: solid black;
-    padding: 15px 60px 15px 60px;
+    padding: 10px;
+    width: 170px;
 }
 
 .minerals {
@@ -26,8 +29,13 @@
 .mineral__options {
     margin: 1em;
     border: solid black;
-    padding: 15px 25px 15px 25px;
+    padding-left: 20px;
     height: 150px;
+    width: 170px;
+}
+
+div.mineral__options ul {
+    padding: 0px;
 }
 
 article.chosen__minerals {
